---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { i16, [10 x i16], [10 x i16*], [10 x i16]* }

@prg_instance = global %prg zeroinitializer

define void @prg(%prg* %0) {
entry:
  %X = getelementptr inbounds %prg, %prg* %0, i32 0, i32 0
  %arrX = getelementptr inbounds %prg, %prg* %0, i32 0, i32 1
  %arrrX = getelementptr inbounds %prg, %prg* %0, i32 0, i32 2
  %rarrX = getelementptr inbounds %prg, %prg* %0, i32 0, i32 3
  %tmpVar = getelementptr inbounds [10 x i16], [10 x i16]* %arrX, i32 0, i32 0
  %load_X = load i16, i16* %X, align [filtered]
  store i16 %load_X, i16* %tmpVar, align [filtered]
  %tmpVar1 = getelementptr inbounds [10 x i16*], [10 x i16*]* %arrrX, i32 0, i32 1
  %tmpVar2 = getelementptr inbounds [10 x i16], [10 x i16]* %arrX, i32 0, i32 2
  store i16* %tmpVar2, i16** %tmpVar1, align [filtered]
  store [10 x i16]* %arrX, [10 x i16]** %rarrX, align [filtered]
  %tmpVar3 = getelementptr inbounds [10 x i16*], [10 x i16*]* %arrrX, i32 0, i32 3
  %deref = load i16*, i16** %tmpVar3, align [filtered]
  %load_tmpVar = load i16, i16* %deref, align [filtered]
  store i16 %load_tmpVar, i16* %X, align [filtered]
  %deref4 = load [10 x i16]*, [10 x i16]** %rarrX, align [filtered]
  %tmpVar5 = getelementptr inbounds [10 x i16], [10 x i16]* %deref4, i32 0, i32 4
  %load_tmpVar6 = load i16, i16* %tmpVar5, align [filtered]
  store i16 %load_tmpVar6, i16* %X, align [filtered]
  %tmpVar7 = getelementptr inbounds [10 x i16*], [10 x i16*]* %arrrX, i32 0, i32 5
  %deref8 = load i16*, i16** %tmpVar7, align [filtered]
  %load_X9 = load i16, i16* %X, align [filtered]
  store i16 %load_X9, i16* %deref8, align [filtered]
  %deref10 = load [10 x i16]*, [10 x i16]** %rarrX, align [filtered]
  %tmpVar11 = getelementptr inbounds [10 x i16], [10 x i16]* %deref10, i32 0, i32 6
  %tmpVar12 = getelementptr inbounds [10 x i16*], [10 x i16*]* %arrrX, i32 0, i32 7
  %deref13 = load i16*, i16** %tmpVar12, align [filtered]
  %load_tmpVar14 = load i16, i16* %deref13, align [filtered]
  store i16 %load_tmpVar14, i16* %tmpVar11, align [filtered]
  ret void
}
